# Lila

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dependencies.cmake  Dependencies.lua  Doxyfile  LICENSE  README.md  build.sh  premake5.lua  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  documentation.yml
App/: CMakeLists.txt  LaunchInfo.cmake
App/assets/: default.frag  default.vert
App/src/: App.cpp  Main.cpp
Launcher/: CMakeLists.txt  README.md
Launcher/src/: Launcher.cpp
Lila/: CMakeLists.txt  build.lua  imgui.ini
Lila/assets/: default.frag  default.vert  texture.frag  texture.vert
Lila/assets/shaders/: cube.frag  default.frag  default.vert
Lila/src/: EntryLila.cpp  EntryLila.h  main.cpp  pch.h
Lila/src/Application/: Application.cpp  Application.h
Lila/src/Common/: Filesystem.h  Pointers.h  Types.h  UUID.cpp  UUID.h
Lila/src/ECS/: ComponentManager.cpp  ComponentManager.h  Components.h  ECS.cpp  ECS.h  Entity.h  EntityManager.cpp  EntityManager.h  SparseSet.h
Lila/src/Event/: EventBus.h
Lila/src/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Lila/src/Lila/: Entry.h  Lila.h
Lila/src/Lila/Assets/: Asset.h  AssetManager.cpp  AssetManager.h
Lila/src/Lila/Core/: Application.h  Logger.h  Window.cpp  Window.h
Lila/src/Lila/ECS/: Component.h  ComponentHandler.h  ComponentPool.h  Entity.h  Registry.cpp  Registry.h  System.h  SystemHandler.h
Lila/src/Lila/Events/: Event.h  EventBus.cpp  EventBus.h  EventHandler.h
Lila/src/Lila/Math/: Graph.cpp  Graph.h  Math.cpp  Math.h  Matrices.cpp  Matrices.h  Quaternion.cpp  Quaternion.h  Vectors.h
Lila/src/Lila/Rendering/: Geometry.h  Shader.h
Lila/src/Lila/Utils/: FileUtils.h  Memory.h  UUID.cpp  UUID.h  Utils.h
Lila/src/Lila/core/: Application.cpp  Application.h  Core.h  Entry.h  Event.h  FrameBuffer.cpp  FrameBuffer.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.h  Window.cpp  Window.h
Lila/src/Lila/ecs/: Component.h  ComponentHandler.h  ComponentPool.h  Components.h  Entity.h  Registry.cpp  Registry.h  System.h  SystemHandler.h  World.cpp  World.h
Lila/src/Lila/events/: ApplicationEvent.h  Event.h  EventBus.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
Lila/src/Lila/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Lila/src/Lila/math/: Math.h  Matrices.h  Vectors.h
Lila/src/Lila/renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Lila/src/Lila/utils/: Mat4.cpp  Mat4.h  Vectors.h  math.h
Lila/src/Lila/world/: Camera.cpp  Camera.h
Lila/src/Log/: LogLevel.h  Logger.h  Macros.h
Lila/src/Logging/: LogLevel.h  Logger.cpp  Logger.h  Macros.h
Lila/src/Math/: Matrix.h  Quaternion.h  Vec2.h  Vec3.h  Vec4.h
Lila/src/Platform/: Defines.h  Dependencies.h  Graphics.cpp  Graphics.h  LibraryAdapter.h  Platform.h  imgui_impl_opengl3.cpp
Lila/src/Platform/Linux/: LinuxLibraryAdapter.cpp
Lila/src/Platform/OpenGL/: GLGeometry.cpp  GLGeometry.h  GLShader.cpp  GLShader.h  GLSuccess.h  OpenGL.h
Lila/src/Platform/Windows/: PlatformWindows.h  WindowsLibraryAdapter.cpp
Lila/src/Renderer/: Geometry.h  RenderInfo.h  Renderer.h  Shader.h  Texture.h  Window.cpp  Window.h
Lila/src/Renderer/OpenGL/: GLGeometry.cpp  GLGeometry.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
Lila/src/Rendering/: Geometry.h  Window.cpp  Window.h
Lila/src/Rendering/OpenGL/: GLGeometry.cpp  GLGeometry.h  GLShader.cpp  GLShader.h
Lila/src/World/: Camera.cpp  Camera.h  MVP.cpp  MVP.h
Lila/src/console/: ConsoleTypes.h  Logger.cpp  Logger.h
Lila/src/core/: Window.cpp  Window.h
Lila/src/ecs/: Component.h  ComponentHandler.h  ComponentPool.h  Entity.h  Registry.cpp  Registry.h  System.h  SystemHandler.h
Lila/src/math/: math.cpp  math.h  matrix4.cpp  matrix4.h  vec2.h  vec3.h  vec4.h
Lila/src/platform/: Types.h  filesystem.h  platform.h
Lila/src/renderer/: Camera.h  Geometry.h  Perspective.cpp  Perspective.h  Shader.h  Texture.h
Lila/src/renderer/OpenGL/: GLGeometry.cpp  GLGeometry.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLTypes.h
Lila/src/test/: test.cpp
LilaEditor/: build.lua
LilaEditor/assets/shaders/: default.frag  default.vert
LilaEditor/src/: EditorApp.cpp  main.cpp
LilaEditor/src/Editor/: Editor.cpp  Editor.h  Hierarchy.cpp  Hierarchy.h  Inspector.cpp  Inspector.h
Scripts/: BuildLinux.sh  BuildWindows.bat
docs/: Building.md  CODE_OF_CONDUCT.md  Dependencies.md  README.md  Roadmap.md
enc_temp_folder/c16cf25e4756b8b27cfe3b375587e9be/: EditorApp.cpp
scripts/: build-make.sh  build-msbuild.bat  build-vs2022.bat  build.bat  build.sh
testbed/: build.lua
testbed/src/: TestBedApp.cpp  main.cpp
